--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -30,7 +30,7 @@
   <div class="field<%= ' field_with_errors' if @post.errors[:content].any? %>">
     <%= label_tag "content", "Content" %>
     <br />
-    <%= text_area_tag "content", @post.content %>
+    <%= text_field_tag "content", @post.content %>
   </div>
   <%= submit_tag "Create" %>
 <% end %>
